--- a/package.json
+++ b/package.json
@@ -4,15 +4,20 @@
   "private": true,
   "dependencies": {
     "@hookform/error-message": "^2.0.0",
+    "@react-pdf/renderer": "^2.1.1",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
+    "js-file-download": "^0.4.12",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.28.0",
+    "react-icons": "^4.3.1",
+    "react-modal": "^3.14.4",
+    "react-pdf": "^5.7.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "sass": "^1.49.9",
